src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADT_Integration__c</fullName>
        <label>ADT Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AQmen_data_accuracy__c</fullName>
        <defaultValue>&quot;AF CRM CSD Vascular SI NMD&quot;</defaultValue>
        <label>AQmen data accuracy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVP__c</fullName>
        <inlineHelpText>Area Vice President</inlineHelpText>
        <label>AVP</label>
        <picklist>
            <picklistValues>
                <fullName>Michael Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlton Brock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Arancio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Affiliations__c</fullName>
        <label>Account Affiliations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <description>Account Group defined in Back Office</description>
        <inlineHelpText>Group Code for Account Type</inlineHelpText>
        <label>Account Group</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreements_Rebates_SJM_responsibility__c</fullName>
        <defaultValue>&quot;If listing a corporate agreement here please ensure an Executive Summary is attached to the account record&quot;</defaultValue>
        <description>Use this field to describe any Corporate agreements and the person responsible for maintaining them</description>
        <inlineHelpText>Use this field to describe any Corporate agreements and the person responsible for maintaining them</inlineHelpText>
        <label>Agreements, Rebates &amp; SJM responsibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <label>Annual Spend?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>NCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assurance_Service_Plans__c</fullName>
        <label>Assurance/Service Plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_AF_Region__c</fullName>
        <description>Canada Region</description>
        <inlineHelpText>Canada Region</inlineHelpText>
        <label>CA AF Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEO_CFO_Key_Decision_Makers__c</fullName>
        <label>CEO, CFO &amp; Key Decision Makers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMEstablished__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Established Account (EA): These are accounts that are believers and are implanting 2+ sensors per month</inlineHelpText>
        <label>Established</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMHeartmate_3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they in HM3 Trial - Yes or No</inlineHelpText>
        <label>Heartmate 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMJumpStart__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Jump-Start Account (JSA): These are accounts that have financial or clinical considerations that are currently impacting adoption (Novitas accounts, centers that believe they need additional FTE)</inlineHelpText>
        <label>JumpStart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMMDM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MDM Account (MDM): These are accounts with which to leverage the MDM relationship</inlineHelpText>
        <label>MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMNew__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>New Account (NA): These are accounts that have been started in the past month or have a PO but have not started implanting</inlineHelpText>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMReorderAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-order Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMResearch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Research Site (RS): These are accounts in the Post Approval Study (PAS) and the CardioMEMS/HeartMate Study being considered for 2H’16</inlineHelpText>
        <label>Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Implanting_Hospital__c</fullName>
        <label>CRM Implanting Hospital</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Specific_Activity_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box to signify that a Specific activity has been assigned to this customer</description>
        <inlineHelpText>Tick this box to signify that a Specific activity has been assigned to this customer</inlineHelpText>
        <label>CRM Specific Activity Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVIS_System__c</fullName>
        <label>CVIS System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Equipment_Placements__c</fullName>
        <label>Capital Equipment Placements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Report_to_EMR_Integration__c</fullName>
        <label>Case Report to EMR Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinical_Trials__c</fullName>
        <label>Clinical Trials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Activity__c</fullName>
        <label>Competitor Activity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For profit hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not for profit hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching hospital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DBS_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBS Site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEA_Key__c</fullName>
        <description>DEA Number</description>
        <inlineHelpText>A DEA number (DEA Registration Number) is a number assigned to a health care provider.</inlineHelpText>
        <label>DEA Key</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIVISION_NORTH__c</fullName>
        <label>DIVISION: NORTH</label>
        <summaryFilterItems>
            <field>Product_Account__c.Division__c</field>
            <operation>equals</operation>
            <value>NORTH</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Account__c.Account_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DIVISION_SOUTH__c</fullName>
        <label>DIVISION: SOUTH</label>
        <summaryFilterItems>
            <field>Product_Account__c.Division__c</field>
            <operation>equals</operation>
            <value>SOUTH</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Account__c.Account_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DIVISION_WEST__c</fullName>
        <label>DIVISION: WEST</label>
        <summaryFilterItems>
            <field>Product_Account__c.Division__c</field>
            <operation>equals</operation>
            <value>WEST</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Account__c.Account_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_Tender_Renewal__c</fullName>
        <label>Date of Tender Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMR_System__c</fullName>
        <label>EMR System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMR__c</fullName>
        <inlineHelpText>What Electronic Medical Records system is used?</inlineHelpText>
        <label>EMR</label>
        <picklist>
            <picklistValues>
                <fullName>Allscripts-Eclipsys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcase Management Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meditech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Corporate_Agreement__c</fullName>
        <label>End Date of Corporate Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory Surgery Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Office Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient facility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLN_Key__c</fullName>
        <description>Global Location Number</description>
        <inlineHelpText>Global Location Number (GLN) can be used by companies to identify their locations, giving them complete flexibility to identify any type or level of location required.</inlineHelpText>
        <label>GLN Key</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Consulting_Agreements__c</fullName>
        <label>HCP &amp; Consulting Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIN_Key__c</fullName>
        <description>Health Industry Number</description>
        <inlineHelpText>The HIN is a unique and standardized identifier that enumerates hospitals, providers, suppliers, and all other partners doing business in the supply chain. It is the method used by your trading partners for identifying locations of services and activities</inlineHelpText>
        <label>HIN Key</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIS__c</fullName>
        <inlineHelpText>What Healthcare Information System is used?</inlineHelpText>
        <label>HIS</label>
        <picklist>
            <picklistValues>
                <fullName>Allscripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE-Centricity/IDX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NexGen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuadraMed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_a_CRM_Clinic__c</fullName>
        <label>Has a CRM Clinic</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heart_Failure_Clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heart Failure Clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN__c</fullName>
        <inlineHelpText>Select the Integrated Delivery Network (IDN)</inlineHelpText>
        <label>IDN</label>
        <picklist>
            <picklistValues>
                <fullName>Adventist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ardent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic Health Initiative (CHI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Health System (CHS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dignity Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essentia Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franciscan Health System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermountain Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Providence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOM (Sisters of Mercy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSM (Sisters of Sorrowful Mother)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sisters of Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Colorado Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Washington Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast Purchasing Consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Connectivity__c</fullName>
        <label>IT Connectivity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Medicare_ID__c</fullName>
        <label>Medicare ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Agreements__c</fullName>
        <label>Minimum Purchase Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Beds__c</fullName>
        <inlineHelpText>How many beds does this facility have?</inlineHelpText>
        <label># of Beds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Cath_Labs__c</fullName>
        <inlineHelpText>Number of Cath Labs</inlineHelpText>
        <label># of Cath Labs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_EP_Labs__c</fullName>
        <inlineHelpText>Number of EP Labs</inlineHelpText>
        <label># of EP Labs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_EMR__c</fullName>
        <label>Other EMR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_GPO_Affiliation__c</fullName>
        <label>Other GPO Affiliation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HIS__c</fullName>
        <label>Other HIS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_IDN__c</fullName>
        <label>Other IDN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Web__c</fullName>
        <label>Other Web</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PACS_Inegration__c</fullName>
        <label>PACS Inegration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PACS_Integration__c</fullName>
        <label>PACS Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PACS_System__c</fullName>
        <label>PACS System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE_CARDIOMEMS__c</fullName>
        <label>PRODUCT LINE: CARDIOMEMS</label>
        <summaryFilterItems>
            <field>Product_Account__c.Product_Line__c</field>
            <operation>equals</operation>
            <value>CARDIOMEMS</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Account__c.Account_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE_INTEGRATED_LABS__c</fullName>
        <label>PRODUCT LINE: INTEGRATED LABS</label>
        <summaryFilterItems>
            <field>Product_Account__c.Product_Line__c</field>
            <operation>equals</operation>
            <value>AF</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Account__c.Account_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>Physical City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Physical Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_County__c</fullName>
        <label>Physical County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Postal_Code__c</fullName>
        <label>Physical Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <label>Physical State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <label>Physical Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_GPO_Affiliation__c</fullName>
        <label>Primary GPO Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Amerinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Division__c</fullName>
        <label>Product Division</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Launches__c</fullName>
        <label>Product Launches</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professional_Society__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Professional Society</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional Society</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Professional Societies</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchasing Group Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchasing Facilities</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <inlineHelpText>Regional Sales Director</inlineHelpText>
        <label>RSD</label>
        <picklist>
            <picklistValues>
                <fullName>Donald Olney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albert Sprenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raymond Leonard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlton Brock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Madder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claude Eldaye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philip Stackpole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Nystedt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeffrey Fernald</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Territory__c</fullName>
        <label>Region/Territory</label>
        <picklist>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>